syntax = "proto3";
import "BasicTypes.proto";
import "DtoTypes.proto";

option csharp_namespace = "LocationToolAssignmentService";

package LocationToolAssignments;

service LocationToolAssignments {
	rpc LoadLocationToolAssignments(NoParams) returns (ListOfLocationToolAssignments);
	rpc LoadLocationReferenceLinksForTool(Long) returns (ListOfLocationLink);
	rpc LoadUnusedToolUsagesForLocation(Long) returns (ListOfToolUsage);
	rpc GetLocationToolAssignmentsByLocationId(Long) returns (ListOfLocationToolAssignments);
	rpc GetLocationToolAssignmentsByIds(ListOfLongs) returns (ListOfLocationToolAssignments);
	rpc InsertLocationToolAssignmentsWithHistory(ListOfLocationToolAssignmentDiffs) returns (ListOfLongs);
	rpc UpdateLocationToolAssignmentsWithHistory(ListOfLocationToolAssignmentDiffs) returns (NoParams);
	rpc AddTestConditions(AddTestConditionsRequest) returns (NoParams);
}

message AssignToolToLocationRequest {
	LocationToolAssignment locationToolAssignment  = 1;
	Long userId = 2;
}

message AddTestConditionsRequest {
	LocationToolAssignment locationToolAssignment  = 1;
	int64 userId = 2;
}
